--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <html>
   <head>
     <title>Joss Duff</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Joss Duff</h1>
-    <a href="https://github.com/JossDuff/">github</a>
-    <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
-    
+    <h1 class="myName">Joss Duff</h1>
+    <p class="links">
+      <a href="https://github.com/JossDuff/">github</a>
+      <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
+      <a href="resources/resume.pdf">resume</a>
+    </p>
+    <p class="intro">
+      Hi!  Welcome to my page.<br>
+      I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.
+    </p>
+      <h2 class="experienceTitle">Experience</h2>
+    <div class="experienceBox">
+      <p class="companyTitle">Lehigh University Nano Human Initiative</p>
+      <p class="jobRole">Software developer</p>
+      <ul class="jobDescription">
+        <li>blah</li>
+        <li>blah</li>
+        <li>blah</li>
+      </ul>
+
+      <p class="companyTitle"> Tiel Incorporated</p>
+      <p class="jobRole">Full stack developer</p>
+      <ul class="jobDescription">
+        <li>blah</li>
+        <li>blah</li>
+        <li>blah</li>
+      </ul>
+
+      <p class="companyTitle">University of Iceland</p>
+      <p class="jobRole">Natural language processing engineer</p>
+      <ul class="jobDescription">
+        <li>blah</li>
+        <li>blah</li>
+        <li>blah</li>
+      </ul>
+    </div>
   </body>
 </html>
