added some info from my resume

--- a/index.html
+++ b/index.html
@@ -11,34 +11,47 @@
       <a href="resources/resume.pdf">resume</a>
     </p>
     <p class="intro">
-      Hi!  Welcome to my page.<br>
+      Hi!  Welcome to my page.  It's currently under construction<br>
       I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.
     </p>
-      <h2 class="experienceTitle">Experience</h2>
-    <div class="experienceBox">
+    <h2 class="generalTitle">Experience</h2>
+    <div class="generalBox">
       <p class="companyTitle">Lehigh University Nano Human Initiative</p>
       <p class="jobRole">Software developer</p>
       <ul class="jobDescription">
-        <li>blah</li>
-        <li>blah</li>
-        <li>blah</li>
+        <li>Small undergraduate team lead by Lehigh's Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes</li>
+        <li>Leader of a four person team this past summer assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh's electron microscope into our existing website</li>
+        <li>Frontend polishing and light server maintenance</li>
+        <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week)</li>
       </ul>
 
       <p class="companyTitle"> Tiel Incorporated</p>
       <p class="jobRole">Full stack developer</p>
       <ul class="jobDescription">
-        <li>blah</li>
-        <li>blah</li>
-        <li>blah</li>
+        <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
+        <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
+        <li>Learned about and interfaced with the Ethereum blockchain as a long-term persistence layer for applications</li>
+        <li>Communicated with and worked as part of a broader engineering team using a full PR-based monorepo workflow to continuously deploy our solution</li>
       </ul>
 
       <p class="companyTitle">University of Iceland</p>
       <p class="jobRole">Natural language processing engineer</p>
       <ul class="jobDescription">
-        <li>blah</li>
-        <li>blah</li>
-        <li>blah</li>
+        <li>Worked with Professor Hafsteinn Einarsson at the University of Iceland on his NLP model</li>
+        <li>Learned about various NLP structures including CNN, RNN, S2S, and Bert model transformers and how to implement them using PyTorch</li>
+        <li>Worked on fine turning Bert NER model used to identify "tech" words startups used to describe themselves</li>
       </ul>
     </div>
+    <h2 class="generalTitle">Skills</h2>
+    <div class="generalBox">
+      <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
+    </div>
+
+    <p class="links">
+      <a href="https://github.com/JossDuff/">github</a>
+      <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
+      <a href="resources/resume.pdf">resume</a>
+    </p>
+
   </body>
 </html>
