--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joss Duff</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   </head>
   <body>
     <h1 class="myName">Joss Duff</h1>
@@ -42,6 +46,17 @@
         <li>Worked on fine turning Bert NER model used to identify "tech" words startups used to describe themselves</li>
       </ul>
     </div>
+
+    <h2 class="generalTitle">Projects</h2>
+    <div class="generalBox">
+      <p class="companyTitle">Photo Upload Project</p>
+      <p class="jobRole">Full stack developer</p>
+      <ul class="jobDescription">
+        <li>Mentored project to create a web app that displays uploaded pictures using React and Express</li>
+        <li>Currently building out the API</li>
+      </ul>
+    </div>
+
     <h2 class="generalTitle">Skills</h2>
     <div class="generalBox">
       <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
@@ -53,5 +68,6 @@
       <a href="resources/resume.pdf">resume</a>
     </p>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
