--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <img src="resources/dragon12.png" class="pull-right img-fluid" alt="dragon">
+          <img src="resources/dragon15.png" class="img-fluid" alt="dragon">
         </div>
         <div class="col">
           <h1 class="myName">Joss Duff</h1>
@@ -40,67 +40,109 @@
     <div class="container-md">
 
       <h2 class="generalTitle">Experience</h2>
-      <div class="container-fluid shadow-sm p-3 mb-5 bg-white rounded">
-        <div class="row">
-          <div class="col">
-            <p>Software Developer</p>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-1 vertical">
+            <img src="resources/LehighShield.png" alt="Lehigh University shield" class="icon">
+          </div>
+          <div class="col-3 vertical">
+            <p class="role">Software Developer</p>
+            <p class="companyTitle">Lehigh University</p>
+            <p class="date">January 2020 - September 2020</p>
           </div>
           <div class="col">
-            <p>Lehigh University</p>
-          </div>
-          <div class="col">
-            <p class="text-right">January 2020 - September 2020</p>
+            <ul class="noMargin">
+              <li>Small undergraduate team lead by Lehigh's Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes</li>
+              <li>Leader of a four person team this past summer assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh's electron microscope into our existing website</li>
+              <li>Frontend polishing and light server maintenance</li>
+              <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week)</li>
+            </ul>
           </div>
         </div>
-        <ul class="jobDescription">
-          <li>Small undergraduate team lead by Lehigh's Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes</li>
-          <li>Leader of a four person team this past summer assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh's electron microscope into our existing website</li>
-          <li>Frontend polishing and light server maintenance</li>
-          <li>Paid internship over the summer (40 hours/week).  Non-paid internship during the academic year (10 hours/week)</li>
-        </ul>
       </div>
 
-      <div class="container-fluid shadow-sm p-3 mb-5 bg-white rounded">
-        <p class="companyTitle"> Tiel Incorporated</p>
-        <p class="jobRole">Full stack developer</p>
-        <ul class="jobDescription">
-          <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
-          <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
-          <li>Learned about and interfaced with the Ethereum blockchain as a long-term persistence layer for applications</li>
-          <li>Communicated with and worked as part of a broader engineering team using a full PR-based monorepo workflow to continuously deploy our solution</li>
-        </ul>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-1 vertical">
+            <img src="resources/Tiel.png" alt="Tiel" class="icon">
+          </div>
+          <div class="col-3 vertical">
+            <p class="role">Full Stack Developer</p>
+            <p class="companyTitle">Tiel Incorporated</p>
+            <p class="date">May 2020 - September 2020</p>
+          </div>
+          <div class="col">
+            <ul class="noMargin">
+              <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
+              <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
+              <li>Learned about and interfaced with the Ethereum blockchain as a long-term persistence layer for applications</li>
+              <li>Communicated with and worked as part of a broader engineering team using a full PR-based monorepo workflow to continuously deploy our solution</li>
+            </ul>
+          </div>
+        </div>
       </div>
 
-      <div class="container-fluid shadow-sm p-3 mb-5 bg-white rounded">
-        <p class="companyTitle">University of Iceland</p>
-        <p class="jobRole">Natural language processing engineer</p>
-        <ul class="jobDescription">
-          <li>Worked with Professor Hafsteinn Einarsson at the University of Iceland on his NLP model</li>
-          <li>Learned about various NLP structures including CNN, RNN, S2S, and Bert model transformers and how to implement them using PyTorch</li>
-          <li>Worked on fine turning Bert NER model used to identify "tech" words startups used to describe themselves</li>
-        </ul>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-1 vertical">
+            <img class="icon" src="http://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
+          </div>
+          <div class="col-3 vertical">
+            <p class="role">Natural Language Processing Engineer</p>
+            <p class="companyTitle">University of Iceland</p>
+            <p class="date">October 2020 - December 2020</p>
+          </div>
+          <div class="col">
+            <ul class="noMargin">
+              <li>Worked with Professor Hafsteinn Einarsson at the University of Iceland on his NLP model</li>
+              <li>Learned about various NLP structures including CNN, RNN, S2S, and Bert model transformers and how to implement them using PyTorch</li>
+              <li>Worked on fine turning Bert NER model used to identify "tech" words startups used to describe themselves</li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <h2 class="generalTitle">Projects</h2>
-      <div class="container-fluid shadow-sm p-3 mb-5 bg-white rounded">
-        <p class="companyTitle">Photo Upload Project</p>
-        <p class="jobRole">Full stack developer</p>
-        <ul class="jobDescription">
-          <li>Mentored project to create a web app that displays uploaded pictures using React and Express</li>
-          <li>Currently building out the API</li>
-        </ul>
+
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-1 vertical">
+
+          </div>
+          <div class="col-3 vertical">
+            <p class="role">Full Stack Developer</p>
+            <p class="companyTitle">Independent Photo Upload Project</p>
+            <p class="date">April 2020 - September 2020</p>
+          </div>
+          <div class="col">
+            <ul class="noMargin">
+              <li>Mentored project to create a web app that displays uploaded pictures using React and Express</li>
+              <li>Currently building out the API</li>
+            </ul>
+          </div>
+        </div>
       </div>
 
       <h2 class="generalTitle">Skills</h2>
-      <div class="container-fluid shadow-sm p-3 mb-5 bg-white rounded">
-        <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
+          <img src="" alt="">
+        </div>
       </div>
     </div>
 
     <p class="links">
-      <a href="https://github.com/JossDuff/">github</a>
-      <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
-      <a href="resources/resume.pdf">resume</a>
+      <a href="https://github.com/JossDuff/">
+        <img src="resources/github.png" alt="github" class="imglink">
+      </a>
+      <a href="https://www.linkedin.com/in/joss-duff-305670200/">
+        <img src="resources/linkedin.png" alt="linkedin" class="imglink">
+      </a>
+      <a href="resources/resume.pdf">
+        <img src="resources/resume.png" alt="resume" class="imglink">
+      </a>
     </p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
