added profile photo and education section

--- a/index.html
+++ b/index.html
@@ -14,37 +14,71 @@
           <img src="resources/dragon15.png" class="img-fluid" alt="dragon">
         </div>
         <div class="col">
-          <h1 class="myName">Joss Duff</h1>
-          <p class="links">
-            <a href="https://github.com/JossDuff/">
-              <img src="resources/github.png" alt="github" class="imglink">
-            </a>
-            <a href="https://www.linkedin.com/in/joss-duff-305670200/">
-              <img src="resources/linkedin.png" alt="linkedin" class="imglink">
-            </a>
-            <a href="resources/resume.pdf">
-              <img src="resources/resume.png" alt="resume" class="imglink">
-            </a>
-          </p>
-          <p class="intro">
-            Hi!  Welcome to my page.  It's currently under construction.<br>
-            I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.  You can reach me at jod323@lehigh.edu.
-          </p>
+          <div class="row">
+            <div class="col horizontal">
+              <img class="profile-img" src="resources/profile1.jpg" alt="profile photo">
+            </div>
+          </div>
+          <div class="row">
+            <h1 class="myName">Joss Duff</h1>
+            <p class="links">
+              <a href="https://github.com/JossDuff/">
+                <img src="resources/github.png" alt="github" class="imglink">
+              </a>
+              <a href="https://www.linkedin.com/in/joss-duff-305670200/">
+                <img src="resources/linkedin.png" alt="linkedin" class="imglink">
+              </a>
+              <a href="resources/resume.pdf">
+                <img src="resources/resume.png" alt="resume" class="imglink">
+              </a>
+            </p>
+            <p class="intro">
+              Hi!  Welcome to my page.  It's currently under construction.<br>
+              I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.  You can reach me at jod323@lehigh.edu.
+            </p>
+          </div>
         </div>
         <div class="col">
-          <img src="resources/dragon4.png" class="img-fluid" alt="dragon">
+          <img src="resources/dragon12edit.png" class="img-fluid" alt="dragon">
         </div>
       </div>
     </div>
 
     <div class="container-md">
 
+      <h2 class="generalTitle">Education</h2>
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-1 vertical">
+            <img src="resources/LUcrest.png" alt="Tiel" class="icon">
+          </div>
+          <div class="col-6 vertical">
+            <p>Lehigh University</p>
+            <p>BS Computer Science and Business 2023</p>
+            <p>GPA 3.48</p>
+          </div>
+          <div class="col">
+            <p class="noMargin">Relevant Classes</p>
+            <ul class="noMargin">
+              <li>Fundamentals Of Programming</li>
+              <li>Programming & Data Structures</li>
+              <li>Systems Software</li>
+              <li>Intro To Financial Accounting</li>
+              <li>Foundations of Business</li>
+              <li>Business Communucation</li>
+              <li>Principles Of Economics</li>
+              <li>Calculus I & II</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <h2 class="generalTitle">Experience</h2>
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-1 vertical">
-            <img src="resources/LehighShield.png" alt="Lehigh University shield" class="icon">
+            <img src="resources/LUcrest.png" alt="Lehigh University shield" class="icon">
           </div>
           <div class="col-3 vertical">
             <p class="role">Software Developer</p>
@@ -65,7 +99,7 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-1 vertical">
-            <img src="resources/Tiel.png" alt="Tiel" class="icon">
+            <img src="resources/tiel.png" alt="Tiel" class="icon">
           </div>
           <div class="col-3 vertical">
             <p class="role">Full Stack Developer</p>
@@ -104,7 +138,6 @@
       </div>
 
       <h2 class="generalTitle">Projects</h2>
-
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-1 vertical">
@@ -128,7 +161,6 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
-          <img src="" alt="">
         </div>
       </div>
     </div>
