--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="col">
           <div class="row">
             <div class="col horizontal">
-              <img class="profile-img" src="resources/profile1.jpg" alt="profile photo">
+              <img class="profile-img" src="resources/profile1.JPG" alt="profile photo">
             </div>
           </div>
           <div class="row">
