formatted profile image

--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
           <img src="resources/dragon15.png" class="img-fluid" alt="dragon">
         </div>
         <div class="col">
-          <div class="row">
-            <div class="col horizontal">
-              <img class="profile-img" src="resources/profile1.JPG" alt="profile photo">
-            </div>
-          </div>
-          <div class="row">
+            <img class="profile-img mx-auto d-block" src="resources/profile1.JPG" alt="profile photo">
             <h1 class="myName">Joss Duff</h1>
             <p class="links">
               <a href="https://github.com/JossDuff/">
@@ -36,7 +31,6 @@
               Hi!  Welcome to my page.  It's currently under construction.<br>
               I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.  You can reach me at jod323@lehigh.edu.
             </p>
-          </div>
         </div>
         <div class="col">
           <img src="resources/dragon12edit.png" class="img-fluid" alt="dragon">
