updated readme and a few links

--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
             <img class="profile-img mx-auto d-block" src="resources/profile1.JPG" alt="profile photo">
             <h1 class="myName">Joss Duff</h1>
             <p class="links">
-              <a href="https://github.com/JossDuff/">
-                <img src="resources/github.png" alt="github" class="imglink">
-              </a>
-              <a href="https://www.linkedin.com/in/joss-duff-305670200/">
-                <img src="resources/linkedin.png" alt="linkedin" class="imglink">
-              </a>
-              <a href="resources/resume.pdf">
-                <img src="resources/resume.png" alt="resume" class="imglink">
-              </a>
+              <a href="https://github.com/JossDuff/"><img src="resources/github.png" alt="github" class="imglink"></a>
+              <a href="https://www.linkedin.com/in/joss-duff-305670200/"><img src="resources/linkedin.png" alt="linkedin" class="imglink"></a>
+              <a href="resources/resume.pdf"><img src="resources/resume.png" alt="resume" class="imglink"></a>
             </p>
             <p class="intro">
               Hi!  Welcome to my page.  It's currently under construction.<br>
-              I'm a Sophomore at Lehigh University pursuing a B.S. in Computer Science and Business.  You can reach me at jod323@lehigh.edu.
+              I'm a Sophomore at
+              <a href="https://www1.lehigh.edu/">
+              Lehigh University</a> pursuing a
+              <a href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
+              B.S. in Computer Science and Business</a>.  You can reach me at jod323@lehigh.edu.
             </p>
         </div>
         <div class="col">
@@ -47,12 +45,12 @@
             <img src="resources/LUcrest.png" alt="Tiel" class="icon">
           </div>
           <div class="col-6 vertical">
-            <p>Lehigh University</p>
-            <p>BS Computer Science and Business 2023</p>
+            <p class="role">Lehigh University</p>
+            <p class="companyTitle">B.S. Computer Science and Business 2023</p>
             <p>GPA 3.48</p>
           </div>
           <div class="col">
-            <p class="noMargin">Relevant Classes</p>
+            <p class="noMargin bold">Relevant Classes</p>
             <ul class="noMargin">
               <li>Fundamentals Of Programming</li>
               <li>Programming & Data Structures</li>
@@ -95,12 +93,12 @@
           <div class="col-1 vertical">
             <img src="resources/tiel.png" alt="Tiel" class="icon">
           </div>
-          <div class="col-3 vertical">
+          <div class="container col-3 vertical">
             <p class="role">Full Stack Developer</p>
             <p class="companyTitle">Tiel Incorporated</p>
             <p class="date">May 2020 - September 2020</p>
           </div>
-          <div class="col">
+          <div class=" container col">
             <ul class="noMargin">
               <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
               <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
@@ -160,15 +158,9 @@
     </div>
 
     <p class="links">
-      <a href="https://github.com/JossDuff/">
-        <img src="resources/github.png" alt="github" class="imglink">
-      </a>
-      <a href="https://www.linkedin.com/in/joss-duff-305670200/">
-        <img src="resources/linkedin.png" alt="linkedin" class="imglink">
-      </a>
-      <a href="resources/resume.pdf">
-        <img src="resources/resume.png" alt="resume" class="imglink">
-      </a>
+      <a href="https://github.com/JossDuff/"><img src="resources/github.png" alt="github" class="imglink"></a>
+      <a href="https://www.linkedin.com/in/joss-duff-305670200/"><img src="resources/linkedin.png" alt="linkedin" class="imglink"></a>
+      <a href="resources/resume.pdf"><img src="resources/resume.png" alt="resume" class="imglink"></a>
     </p>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
