fixed breakpoints for mobile

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
       <h2 class="generalTitle">Education</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-1 vertical">
+          <div class="col-md-1 vertical">
             <img src="resources/LUcrest.png" alt="Tiel" class="icon">
           </div>
-          <div class="col-6 vertical">
+          <div class="col-md-6 vertical">
             <p class="role">Lehigh University</p>
             <p class="companyTitle">B.S. Computer Science and Business 2023</p>
             <p>GPA 3.48</p>
           </div>
-          <div class="col">
+          <div class="col-md">
             <p class="noMargin bold">Relevant Classes</p>
             <ul class="noMargin">
               <li>Fundamentals Of Programming</li>
@@ -69,15 +69,15 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-1 vertical">
+          <div class="col-md-2 vertical">
             <img src="resources/LUcrest.png" alt="Lehigh University shield" class="icon">
           </div>
-          <div class="col-3 vertical">
+          <div class="col-lg-3 vertical">
             <p class="role">Software Developer</p>
             <p class="companyTitle">Lehigh University</p>
             <p class="date">January 2020 - September 2020</p>
           </div>
-          <div class="col">
+          <div class="col-md">
             <ul class="noMargin">
               <li>Small undergraduate team lead by Lehigh's Dr. Brian Chen to create a graphic user interface for remote control and viewing of electron microscopes</li>
               <li>Leader of a four person team this past summer assigned with the task of implementing a custom Python library developed by the manufacturer of Lehigh's electron microscope into our existing website</li>
@@ -90,15 +90,15 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-1 vertical">
+          <div class="col-md-2 vertical">
             <img src="resources/tiel.png" alt="Tiel" class="icon">
           </div>
-          <div class="container col-3 vertical">
+          <div class="col-lg-3 vertical">
             <p class="role">Full Stack Developer</p>
             <p class="companyTitle">Tiel Incorporated</p>
             <p class="date">May 2020 - September 2020</p>
           </div>
-          <div class=" container col">
+          <div class="col-md">
             <ul class="noMargin">
               <li>Small startup creating solution for game developers to seamlessly interface in game items with the Ethereum blockchain</li>
               <li>Utilized modern best practices to construct highly-scalable API solutions on AWS using the Serverless framework and DynamoDB</li>
@@ -111,15 +111,15 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-1 vertical">
+          <div class="col-md-1 vertical">
             <img class="icon" src="http://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
           </div>
-          <div class="col-3 vertical">
+          <div class="col-lg-3 vertical">
             <p class="role">Natural Language Processing Engineer</p>
             <p class="companyTitle">University of Iceland</p>
             <p class="date">October 2020 - December 2020</p>
           </div>
-          <div class="col">
+          <div class="col-md">
             <ul class="noMargin">
               <li>Worked with Professor Hafsteinn Einarsson at the University of Iceland on his NLP model</li>
               <li>Learned about various NLP structures including CNN, RNN, S2S, and Bert model transformers and how to implement them using PyTorch</li>
@@ -132,18 +132,18 @@
       <h2 class="generalTitle">Projects</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-1 vertical">
+          <div class="col-md-1 vertical">
 
           </div>
-          <div class="col-3 vertical">
+          <div class="col-lg-3 vertical">
             <p class="role">Full Stack Developer</p>
             <p class="companyTitle">Independent Photo Upload Project</p>
             <p class="date">April 2020 - September 2020</p>
           </div>
-          <div class="col">
+          <div class="col-md">
             <ul class="noMargin">
               <li>Mentored project to create a web app that displays uploaded pictures using React and Express</li>
-              <li>Currently building out the API</li>
+              <li>Currently building out the API using mySQL</li>
             </ul>
           </div>
         </div>
