--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <h2 class="generalTitle">Education</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-md-1 vertical">
-            <img src="resources/LUcrest.png" alt="Tiel" class="icon">
+          <div class="col-lg-2 center">
+            <img src="resources/LUcrest.png" alt="Lehigh University crest" class="icon">
           </div>
-          <div class="col-md-6 vertical">
+          <div class="col-lg-5 vertical">
             <p class="role">Lehigh University</p>
             <p class="companyTitle">B.S. Computer Science and Business 2023</p>
             <p>GPA 3.48</p>
@@ -69,8 +69,8 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-md-2 vertical">
-            <img src="resources/LUcrest.png" alt="Lehigh University shield" class="icon">
+          <div class="col-lg-2 center">
+            <img src="resources/LUcrest.png" alt="Lehigh University crest" class="icon">
           </div>
           <div class="col-lg-3 vertical">
             <p class="role">Software Developer</p>
@@ -90,7 +90,7 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-md-2 vertical">
+          <div class="col-lg-2 center">
             <img src="resources/tiel.png" alt="Tiel" class="icon">
           </div>
           <div class="col-lg-3 vertical">
@@ -111,7 +111,7 @@
 
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-md-1 vertical">
+          <div class="col-lg-2 center">
             <img class="icon" src="http://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
           </div>
           <div class="col-lg-3 vertical">
@@ -132,7 +132,7 @@
       <h2 class="generalTitle">Projects</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <div class="col-md-1 vertical">
+          <div class="col-lg-2 center">
 
           </div>
           <div class="col-lg-3 vertical">
