--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               <li>Fundamentals Of Programming</li>
               <li>Programming & Data Structures</li>
               <li>Systems Software</li>
-              <li>Intro To Financial Accounting</li>
-              <li>Foundations of Business</li>
-              <li>Business Communucation</li>
+              <li>Computer Organization and Architecture</li>
+              <li>Blockchain Concepts and Applications</li>
+              <li>Statistical Methods</li>
               <li>Principles Of Economics</li>
               <li>Calculus I & II</li>
             </ul>
@@ -149,10 +149,30 @@
         </div>
       </div>
 
+      <div class="container-fluid p-3 mb-5 bg-white rounded">
+        <div class="row shadow p-3">
+          <div class="col-lg-2 center">
+            <img class="icon" src="resources/profile1.jpg" alt="Profile picture">
+
+          </div>
+          <div class="col-lg-3 vertical">
+            <p class="role">Web Developer</p>
+            <p class="companyTitle">jossduff.com</p>
+            <p class="date">January 2021</p>
+          </div>
+          <div class="col-md">
+            <ul class="noMargin">
+              <li>Simple one page website for readability</li>
+              <li>HTML, CSS, and Bootstrap</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <h2 class="generalTitle">Skills</h2>
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
-          <p>C, JavaScript, React, Express, Java, Python, Git, HTML, Pytorch, MySql, AWS Serverless, Slack</p>
+          <p>C, JavaScript, React, Express, Java, Python, HTML, CSS, Pytorch, MySql, Git, AWS Serverless, Slack</p>
         </div>
       </div>
     </div>
