--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container-fluid p-3 mb-5 bg-white rounded">
         <div class="row shadow p-3">
           <div class="col-lg-2 center">
-            <img class="icon" src="http://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
+            <img class="icon" src="https://honnunarstadall.hi.is/sites/honnunarstadall.hi.is/files/styles/500_breidd/public/admin/Prentupplausn/Mappa4/pallas_athena_positivblue.jpg?itok=ZDjAmjIx" alt="Háskóli Íslands">
           </div>
           <div class="col-lg-3 vertical">
             <p class="role">Natural Language Processing Engineer</p>
