--- a/index.html
+++ b/index.html
@@ -10,28 +10,26 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          <img src="resources/dragon15.png" class="img-fluid" alt="dragon">
+        <div class="col-lg-4">
+          <h1 class="myName">jossduff.com</h1>
         </div>
-        <div class="col">
-            <img class="profile-img mx-auto d-block" src="resources/profile1.JPG" alt="profile photo">
-            <h1 class="myName">Joss Duff</h1>
-            <p class="links">
-              <a href="https://github.com/JossDuff/"><img src="resources/github.png" alt="github" class="imglink"></a>
-              <a href="https://www.linkedin.com/in/joss-duff-305670200/"><img src="resources/linkedin.png" alt="linkedin" class="imglink"></a>
-              <a href="resources/resume.pdf"><img src="resources/resume.png" alt="resume" class="imglink"></a>
-            </p>
+        <div class="col-lg-4">
             <p class="intro">
-              Hi!  Welcome to my page.  It's currently under construction.<br>
+              Hi!  Welcome to my page.  It's always under construction.
+              <br>
               I'm a Sophomore at
               <a href="https://www1.lehigh.edu/">
               Lehigh University</a> pursuing a
               <a href="http://catalog.lehigh.edu/coursesprogramsandcurricula/interdisciplinaryundergraduatestudy/computerscienceandbusinessprogram/#text">
-              B.S. in Computer Science and Business</a>.  You can reach me at jod323@lehigh.edu.
+              B.S. in Computer Science and Business</a>.  I love learning about anything relating to blockchain technologies.  You can reach me at jod323@lehigh.edu.
+              <br>
+              <a href="https://github.com/JossDuff/">github</a>
+              <a href="https://www.linkedin.com/in/joss-duff-305670200/">linkedin</a>
+              <a href="resources/resume.pdf">resume</a>
             </p>
         </div>
-        <div class="col">
-          <img src="resources/dragon12edit.png" class="img-fluid" alt="dragon">
+        <div class="col-lg-1 center">
+
         </div>
       </div>
     </div>
@@ -75,14 +73,14 @@
           <div class="col-md">
             <p class="noMargin bold">Relevant Classes</p>
             <ul class="noMargin">
-              <li>Fundamentals Of Programming</li>
+              <li>Blockchain in Algorithms and Systems</li>
+              <li>Blockchain Concepts and Applications</li>
+              <li>Database Systems and Applications</li>
               <li>Programming & Data Structures</li>
+              <li>Programming Languages</li>
+              <li>Software Engineering</li>
               <li>Systems Software</li>
               <li>Computer Organization and Architecture</li>
-              <li>Blockchain Concepts and Applications</li>
-              <li>Statistical Methods</li>
-              <li>Principles Of Economics</li>
-              <li>Calculus I & II</li>
             </ul>
           </div>
         </div>
@@ -200,12 +198,8 @@
       </div>
     </div>
 
-    <p class="links">
-      <a href="https://github.com/JossDuff/"><img src="resources/github.png" alt="github" class="imglink"></a>
-      <a href="https://www.linkedin.com/in/joss-duff-305670200/"><img src="resources/linkedin.png" alt="linkedin" class="imglink"></a>
-      <a href="resources/resume.pdf"><img src="resources/resume.png" alt="resume" class="imglink"></a>
-    </p>
+    <p>take me to the top</p>
+    <p>Or keep scrolling for pictures of my dogs :)</p>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
 </html>
